[tool.poetry]
name = "nonebot_plugin_ark_roulette"
version = "2.0.1"
description = "一个用于 NoneBot 的插件，提供明日方舟干员筛选与随机选择功能，适用于群聊娱乐。"
authors = ["星之游"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xingzhiyou/nonebot-plugin-ark-roulette"
repository = "https://github.com/xingzhiyou/nonebot-plugin-ark-roulette"
keywords = ["nonebot", "plugin", "arknights", "roulette", "chatbot"]

packages = [{ include = "nonebot_plugin_ark_roulette", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
nonebot2 = "^2.3.0"  # 更新 NoneBot2 版本
httpx = "^0.28"
nonebot-plugin-localstore = "^0.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "~24.3.0"
isort = "^5.10.1"
basedpyright = "^1.29.1"
ruff = "^0.11.10"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "recommended"
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportCallInDefaultInitializer = false  # nonebot dependency injection

[tool.ruff]
line-length = 108
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "TID",   # flake8-tidy-imports
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]
